# mnist_keras

./: README.md  download  pyproject.toml  requirements.txt
docs/: github_setup.md  original_work_notes.md
notebooks/: mnist_in_keras_recreated.ipynb
src/mnist_keras/: __init__.py  data.py  models.py  train_cnn.py  train_dense.py  visualize.py
