[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-keras-classifier"
version = "0.1.0"
description = "MNIST handwritten digit classification using TensorFlow/Keras dense and convolutional neural networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
